pages/main/style.css
:root {
    --light-color: #ffffff;
    --bright-color:#000000;
    --main-color: #F9804B;
    --main-color-hover: #E47209;
    --hightlite-color: #FFEE2E;
}

@font-face {
    font-family: Roboto-Bold;
    src: url("../../assets/font/Roboto/Roboto-Bold.ttf");
}

@font-face {
    font-family: Roboto-Regular;
    src: url("../../assets/font/Roboto/Roboto-Regular.ttf");
}

@font-face {
    font-family: Roboto-Medium;
    src: url("../../assets/font/Roboto/Roboto-Medium.ttf");
}

@font-face {
    font-family: Roboto-Light;
    src: url("../../assets/font/Roboto/Roboto-Light.ttf");
}

@font-face {
    font-family: Roboto-Thin;
    src: url("../../assets/font/Roboto/Roboto-Thin.ttf");
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.wrapper {
    margin: 0 auto;
    width: 1600px;
    font-family: Roboto-Regular;
    font-size: 16px;
}

.btn {
    position: relative;
    width: 298px;
    height: 54px;
    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
    font-family: Roboto-Medium;
    color: var(--light-color);
    font-size: 16px;
    text-transform: uppercase;
    border-radius: 25px;
    border-color: transparent;
    cursor: pointer;
    z-index: 1;
}

/*.btn::before {*/
/*    content:"";*/
/*    position: absolute;*/
/*    top: -2px;*/
/*    right: -2px;*/
/*    bottom: -2px;*/
/*    left: -2px;*/
/*    background: linear-gradient(113.96deg, #E47209 100%, #E47209 100%);*/
/*    z-index: -1;*/
/*    transition: opacity 0.3s linear;*/
/*    opacity: 0;*/
/*    border-radius: 25px;*/
/*}*/

/*.btn:hover::before {*/
/*    opacity: 1;*/
/*}*/

.btn:hover {
    background: #E47209;
}

.btn:active {
    background: #4B9200;
}

.subheading {
    font-size: 36px;
    line-height: 130%;
    font-weight: 400;
}

.subtitle {
    font-size: 24px;
    font-weight: 400;
}
.color-white {
    color: var(--light-color);
}

.paragraph {
    line-height: 22.5px;
}

.align {
    text-align: center;
}

a {
    text-decoration: none;
    color: var(--light-color);
}

/*Navigation styles*/
.header {
    position: relative;
    width: 100%;
}
.navigation {
    position: fixed;
    z-index: 2;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 63px;
    padding: 0 220px;
    width: 1600px;
    height: 80px;
    background-color: var(--bright-color);
    color: var(--light-color);
}

.logo-menu-wrapper {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 63px;
}

.logo-wrap {
    position: relative;
    border: 1px solid var(--light-color);
    cursor: pointer;
}

.logo-title {
    line-height: 23px;
    font-size: 19px;
    font-weight: 400;
    text-align: center;
    padding: 4px;
}

.logo-bamboo {
    position: absolute;
    bottom: 15%;
    left: 13%;
}

.navigation-list{
    display: flex;
    gap: 58px;
}
.navigation-item{
    display: inline-block;
    transition: .3s;
    color: white;
}

.navigation-item:hover {
    color: var(--main-color);
}

.navigation-link {
    text-decoration: none;
    color: inherit;
}

.active-btn {
    color: var(--main-color);
}

.active-btn:has(~ *:hover) {
    color: var(--light-color);
}

.link-designed {
    transition: 0.3s;
}

.link-designed:hover {
    color: var(--main-color-hover);
}

/*Header styles*/

.header-main {
    position: relative;
    background-image: url(../../assets/images/Giant_Panda.png);
    background-repeat: no-repeat;
    background-size: contain;
    height: 780px;
}

.header-title {
    z-index: 0;
    width: 500.31px;
    height: 400px;
    position: absolute;
    left: calc(50% - 500.31px/2 + 330.15px);
    top: 166px;
    font-family: Roboto-Bold;
    font-size: 106.5px;
    text-align: center;
    line-height: 75%;
    text-transform: uppercase;
    color: var(--light-color);
}

.header-title-highlight {
    display: table-caption;
    letter-spacing: 1px;
    color: var(--hightlite-color);
}

.header-title::before {
    z-index: -1;
    content: "";
    display: block;
    border-radius: 50%;
    position: absolute;
    width: 465px;
    height: 465px;
    left: -75px;
    top: -75px;
    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
}

.header-btn {
    position: absolute;
    left: calc(50% - 298px/2 + 332px);
    top: 626px;
}

/*Main */

.main {
    position: relative;
}

/*Main Section 1*/

.first-section {
    margin: 140px 0 180px 0;
    padding: 0 220px;
    display: flex;
    gap: 87px;
}

.first-section-img{
    width: 609px;
}

.first-section-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.main-title {
    font-size: 48px;
    font-weight: 400;
    line-height: 120%;
}

.first-section-decoration {
    position: absolute;
    top: -135px;
    right: 0px;
}

/*Main Section 2*/

.second-section {
    position: relative;
    padding: 0 220px;
}

.wrapper-bar {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 20px;
}

.bar-item {
    border: 1px solid var(--main-color);
    border-radius: 5px;
    cursor: pointer;
    overflow: hidden;

}

.bar-item-img {
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    transition: 0.3s;
}

.bar-item:hover .bar-item-img {
    transform: scale(1.1);
}

.description {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
}

.bar-item:hover .description {
    background-color: rgb(45, 45, 45);
    color: white;
    transform: scale(1);
}

.description-title {
    text-transform: uppercase;
}

.arrow-wrap{
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 62px;
    height: 62px;
    border-radius: 50%;
    background-color: var(--main-color);
    cursor: pointer;
    transition: 0.3s;
}

.arrow-wrap:hover {
    background-color: var(--main-color-hover);
}

.arrow-wrap:active {
    background: #4B9200;
}
/* ... */

